@@ -1,7 +1,7 @@
-# $NetBSD: options.mk,v 1.1 2005/06/08 13:20:04 wiz Exp $
+# $NetBSD: options.mk,v 1.2 2012/06/12 15:45:54 wiz Exp $
 
 PKG_OPTIONS_VAR=	PKG_OPTIONS.esound
-PKG_SUPPORTED_OPTIONS=	inet6
+PKG_SUPPORTED_OPTIONS=	inet6 arts
 PKG_SUGGESTED_OPTIONS=	inet6
 
 .include "../../mk/bsd.options.mk"
@@ -10,4 +10,10 @@ PKG_SUGGESTED_OPTIONS=	inet6
 CONFIGURE_ARGS+=	--enable-ipv6
 .else
 CONFIGURE_ARGS+=	--disable-ipv6
+.endif
+
+.if !empty(PKG_OPTIONS:Marts)
+.include "../../audio/arts/buildlink3.mk"
+.else
+CONFIGURE_ARGS+=	--disable-arts --disable-artstest
 .endif
