@@ -1,20 +1,21 @@
-# $NetBSD: Makefile,v 1.8 2011/05/29 15:12:26 cheusov Exp $
+# $NetBSD: Makefile,v 1.9 2011/10/09 10:02:46 cheusov Exp $
 #
 
-DISTNAME=		sparsehash-1.10
+DISTNAME=		sparsehash-2.0.2
 CATEGORIES=		devel
-MASTER_SITES=		http://google-sparsehash.googlecode.com/files/
+MASTER_SITES=		http://sparsehash.googlecode.com/files/
 
 MAINTAINER=		cheusov@NetBSD.org
 HOMEPAGE=		http://goog-sparsehash.sourceforge.net/
-COMMENT=		Several hash-map implementations in use at Google
+COMMENT=		An extremely memory-efficient hash_map implementation.
 LICENSE=		modified-bsd
 
 PKG_DESTDIR_SUPPORT=	user-destdir
 
 USE_LANGUAGES=		c c++
-USE_PKGLOCALEDIR=	yes
 GNU_CONFIGURE=		yes
+
+TEST_TARGET=		check
 
 INSTALL_MAKE_FLAGS=	docdir=${PREFIX}/share/doc/sparsehash
 
