@@ -1,5 +1,5 @@
-$NetBSD: distinfo,v 1.2 2006/08/03 19:46:42 wiz Exp $
+$NetBSD: distinfo,v 1.3 2011/05/29 15:12:26 cheusov Exp $
 
-SHA1 (sparsehash-1.10.tar.gz) = 47be68232edb4175bde7e1eeda0f0e453a932be8
-RMD160 (sparsehash-1.10.tar.gz) = 7c3dd4310cae69364cb46f4827b403309f539f29
-Size (sparsehash-1.10.tar.gz) = 289819 bytes
+SHA1 (sparsehash-2.0.2.tar.gz) = 12c7552400b3e20464b3362286653fc17366643e
+RMD160 (sparsehash-2.0.2.tar.gz) = 4da86c970e66c4fd3abb82d9b800267175a18bea
+Size (sparsehash-2.0.2.tar.gz) = 340514 bytes
