@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2012,v 1.2821 2012/09/07 15:25:38 adam Exp $
+$NetBSD: CHANGES-2012,v 1.2825 2012/09/08 18:20:20 cheusov Exp $
 
 Changes to the packages collection and infrastructure in 2012:
 
@@ -4361,3 +4361,7 @@ Changes to the packages collection and infrastructure in 2012:
 	Updated graphics/cairo to 1.12.2 [adam 2012-09-07]
 	Updated graphics/cairo-gobject to 1.12.2 [adam 2012-09-07]
 	Updated x11/rendercheck to 1.4 [shattered 2012-09-07]
+	Updated devel/sparsehash to 2.0.2 [cheusov 2012-09-08]
+	Updated pkgtools/nih to 0.10.1nb1 [cheusov 2012-09-08]
+	Updated pkgtools/distbb to 0.45.1nb2 [cheusov 2012-09-08]
+	Updated mail/getmail to 4.34.0 [schmonz 2012-09-08]
